--- a/TextChecker/TextChecker.csproj
+++ b/TextChecker/TextChecker.csproj
@@ -6,4 +6,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Caliburn.Micro" Version="4.0.212" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TextCheckerBL\TextChecker.BusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
